Aplicando testes